[package]
name = "xtemp"
authors = ["Andrew Matteson <andrewkmatteson@gmail.com>"]
version = "0.1.0"
description = "xtemp is a command-line utility that temporarily materializes stdin lines as files so that file-batch processors like md5sum(1) can be used more efficiently in stream-processing pipelines."
homepage = "https://github.com/aromatt/xtemp"
repository = "https://github.com/aromatt/xtemp"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
shell-escape = "0.1"
tempfile = "3"
nix = { version = "0.29", features = ["resource"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
